New Layout Structured

--- a/src/styles/Pages/Layout.scss
+++ b/src/styles/Pages/Layout.scss
@@ -9,8 +9,8 @@
     z-index: 5;
     .top-bar--content {
       .settings-icon {
-        width: 30px;
-        height: 30px;
+        // width: 30px;
+        // height: 30px;
         color: gray;
       }
     }
